# flecs-lab

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: main.yml
